@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2024-11-04T00:38:08Z",
-  "count_outdated" : 508,
-  "uniques_outdated" : 335,
-  "count" : 509,
-  "uniques" : 336,
+  "timestamp" : "2024-12-06T00:39:54Z",
+  "count_outdated" : 509,
+  "uniques_outdated" : 336,
+  "count" : 510,
+  "uniques" : 337,
   "clones" : [
     {
-      "timestamp": "2024-10-27T00:00:00Z",
+      "timestamp": "2024-12-05T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
