@@ -1,3 +1,12 @@
+2024-12-06T00:39:54Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12190659829 # 501
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-06
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 335 508 / 336 509
+* notice: next accum: outdated-unq outdated-all / unq all: 336 509 / 337 510
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2024-10-27] / [2024-12-05]
+
 2024-11-04T00:38:08Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11656091507 # 469
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-04
